# Auto-RC

./: .gitignore
Carrinho/: model.h5
catkin_ws/src/ecoi24_pdi_2018/: CMakeLists.txt  package.xml
catkin_ws/src/ecoi24_pdi_2018/3rd/: ErleRoverManager.cpp  controller.c
catkin_ws/src/ecoi24_pdi_2018/include/ecoi24_pdi_2018/: ErleRoverManager.hpp  LineProcessing.hpp  controller.h
catkin_ws/src/ecoi24_pdi_2018/lsd_1.6_/: lsd.h
catkin_ws/src/ecoi24_pdi_2018/src/: LineProcessing.cpp  ecoi24_pdi_2018_node.cpp
catkin_ws/src/road_line_detection/: CMakeLists.txt  package.xml
catkin_ws/src/road_line_detection/controller/: controller.c  controller.h
catkin_ws/src/road_line_detection/polyfit/: polyfit.hpp
catkin_ws/src/road_line_detection/src/: Road_Line_Processing.cpp  Road_Line_Processing.hpp  road_line_node.cpp
catkin_ws/src/road_line_detection/src/bk/: Road_Line_Processing-bk1.cpp~  Road_Line_Processing-bk2.cpp~  Road_Line_Processing-bk2.hpp~
catkin_ws/src/robotic_project/: CMakeLists.txt~
catkin_ws/src/robotic_project/include/robotic_project/LIFI_emitter/: LIFI_emitter.h  LIFI_emitter.h~
catkin_ws/src/robotic_project/include/robotic_project/NavigationControlNode/: navigationControl.h
catkin_ws/src/robotic_project/include/robotic_project/PWMCommand/: PWMCommand.h
catkin_ws/src/robotic_project/include/robotic_project/virtualGPS/: image_processing.h
catkin_ws/src/robotic_project/launch/: robotic_project.launch  robotic_project.launch~
catkin_ws/src/robotic_project/nodes/: CMakeLists.txt
catkin_ws/src/robotic_project/nodes/ImageTrajectoryGeneratorNode/src/: trajectoryGeneration.cpp~  trajectoryGeneration_node.cpp~
catkin_ws/src/robotic_project/nodes/LIFI_emitterNode/: CMakeLists.txt
catkin_ws/src/robotic_project/nodes/LIFI_emitterNode/src/: LIFI_emitter.cpp~  LIFI_emitter_node.cpp~  LIFI_receiver_node.cpp~  PWMCommand.cpp~
catkin_ws/src/robotic_project/nodes/LIFI_receiverNode/: CMakeLists.txt~
catkin_ws/src/robotic_project/nodes/LIFI_receiverNode/src/: LIFI_receiver.cpp
catkin_ws/src/robotic_project/nodes/ManualOperation_/: CMakeLists.txt
catkin_ws/src/robotic_project/nodes/ManualOperation_/src/: ManualOperation_node.cpp
catkin_ws/src/robotic_project/nodes/NavigationControlNode/: CMakeLists.txt~
catkin_ws/src/robotic_project/nodes/NavigationControlNode/src/: navigationControl_node.cpp~  trajectoryGeneration.cpp~
catkin_ws/src/robotic_project/nodes/PWMCommand_/: CMakeLists.txt
catkin_ws/src/robotic_project/nodes/PWMCommand_/src/: .PWMCommand.cpp.swp  PWMCommand.cpp  PWMCommand_node.cpp
catkin_ws/src/robotic_project/nodes/PWMCommand_/src/old_correct/: PWMCommand.cpp  PWMCommand_node.cpp
catkin_ws/src/robotic_project/nodes/VirtualGPSNode/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/robotic_project/nodes/VirtualGPSNode/3rd/: Object.cpp~
catkin_ws/src/robotic_project/nodes/VirtualGPSNode/src/: virtual_GPS.cpp  virtual_GPS.cpp~  virtual_GPS_node.cpp~
catkin_ws/src/robotic_project/nodes/cv_cameraNode/: CMakeLists.txt
catkin_ws/src/robotic_project/path/: teste1.txt
catkin_ws_bk/src/beginner_tutorials/: package.xml
catkin_ws_bk/src/road_line_detection/: CMakeLists (cópia).txt  CMakeLists.txt
catkin_ws_bk/src/road_line_detection/controller/: controller.c
catkin_ws_bk/src/road_line_detection/lsd_1.6/: lsd.h
catkin_ws_bk/src/road_line_detection/src/: RoadLineProcessing.cpp~  RoadLineProcessing.hpp~  Road_Line_Processing.cpp  Road_Line_Processing.hpp  controller.c~  road_line_node.cpp  vilma_image_node.cpp~
catkin_ws_bk/src/robotic_project/: CMakeLists.txt  package.xml  package.xml~
catkin_ws_bk/src/robotic_project/include/robotic_project/LIFI_receiver/: LIFI_receiver.h  LIFI_receiver.h~
catkin_ws_bk/src/robotic_project/include/robotic_project/NavigationControlNode/: navigationControl.h~  trajectoryGeneration.h~
catkin_ws_bk/src/robotic_project/include/robotic_project/PWMCommand/: PWMCommand.h~
catkin_ws_bk/src/robotic_project/include/robotic_project/PWMCommand/old_correct/: PWMCommand.h
catkin_ws_bk/src/robotic_project/include/robotic_project/trajectoryGeneration/: trajectoryGeneration.h  trajectoryGeneration.h~
catkin_ws_bk/src/robotic_project/include/robotic_project/virtualGPS/: image_processing.h~  virtual_GPS.h  virtual_GPS.h~
catkin_ws_bk/src/robotic_project/launch/: camera1.launch~
catkin_ws_bk/src/robotic_project/nodes/: CMakeLists.txt~
catkin_ws_bk/src/robotic_project/nodes/ImageTrajectoryGeneratorNode/: CMakeLists.txt~
catkin_ws_bk/src/robotic_project/nodes/ImageTrajectoryGeneratorNode/src/: trajectoryGeneration.cpp  trajectoryGeneration_node.cpp
catkin_ws_bk/src/robotic_project/nodes/LIFI_emitterNode/src/: Emitter_ARDUINO.cpp  LIFI_emitter.cpp  LIFI_emitter_node.cpp  LIFI_receiver.cpp~  PWMCommand_node.cpp~
catkin_ws_bk/src/robotic_project/nodes/LIFI_receiverNode/: CMakeLists.txt
catkin_ws_bk/src/robotic_project/nodes/LIFI_receiverNode/src/: Receiver_RASPBERRY.cpp
catkin_ws_bk/src/robotic_project/nodes/ManualOperation_/: CMakeLists.txt~
catkin_ws_bk/src/robotic_project/nodes/ManualOperation_/src/: ManualOperation_node.cpp  ManualOperation_node.cpp~
catkin_ws_bk/src/robotic_project/nodes/NavigationControlNode/: CMakeLists.txt
catkin_ws_bk/src/robotic_project/nodes/NavigationControlNode/src/: navigationControl.cpp  navigationControl.cpp~  navigationControl_node.cpp  trajectoryGeneration_node.cpp~  virtual_GPS.cpp~  virtual_GPS_node.cpp~
catkin_ws_bk/src/robotic_project/nodes/PWMCommand_/src/: PWMCommand.cpp~  PWMCommand_node.cpp~
catkin_ws_bk/src/robotic_project/nodes/VirtualGPSNode/3rd/: Object.cpp  image_processing.cpp  image_processing.cpp~  multipleObjectTracking.cpp
catkin_ws_bk/src/robotic_project/nodes/VirtualGPSNode/src/: virtual_GPS_node.cpp
catkin_ws_bk/src/robotic_project/nodes/cv_cameraNode/: CMakeLists.txt~
catkin_ws_bk/src/robotic_project/path/: teste.txt  teste.txt~
